--- a/pm-tool-backend/src/main/resources/application.properties
+++ b/pm-tool-backend/src/main/resources/application.properties
@@ -1,7 +1,12 @@
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-spring.datasource.url=jdbc:h2:mem:pmtooldb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
+spring.jpa.show-sql=true
+
+spring.datasource.url=jdbc:mysql://localhost:3306/pmtooldb
+spring.datasource.username=root
 spring.datasource.password=root
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.ddl-auto=update
